[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ahse"
version = "0.1.0"
description = "Astronaut Health Simulation Engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AHSE Team" }]
dependencies = [
  "pydantic>=2.7,<3",
  "click>=8.1,<9",
  "rich>=13.7,<14"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ahse*"]
